--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,15 +1,7 @@
 FROM php:7.2-fpm
 
-# Arguments defined in docker-compose.yml
-ARG USER
-ARG UID
-ARG NODE_VERSION
-
-USER root
-
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    apt-utils \
     git \
     zip \
     curl \
@@ -30,41 +22,17 @@ RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd mysqli json g
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-COPY ./laravel.ini /usr/local/etc/php/conf.d
-
 # Create system user to run Composer and Artisan Commands
-RUN useradd -G www-data,root -u $UID -d /home/$USER $USER \
-    && mkdir -p /home/$USER/.composer \
-    && chown -R $USER:$USER /home/$USER
-
-USER $USER
-
-# Install NodeJS using NVM
-RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash > /dev/null \
-    && export NVM_DIR="$HOME/.nvm" > /dev/null \
-    && [ -s "$NVM_DIR/nvm.sh" ] > /dev/null && . "$NVM_DIR/nvm.sh" > /dev/null \
-    && nvm install $NODE_VERSION \
-    && nvm use node
-
-# Add aliases
-RUN git config --global alias.co checkout && git config --global alias.br branch \
-    && git config --global alias.ci commit && git config --global alias.st status
-
-USER root
-
-# Create symbolic links
-RUN ln -s /home/$USER/.nvm/versions/node/v10.21.0/bin/node /usr/bin/node \
-    && ln -s /home/$USER/.nvm/versions/node/v10.21.0/bin/npm /usr/bin/npm
+RUN useradd -G www-data,root -u 1000 -d /home/www www \
+    && mkdir -p /home/www/.composer \
+    && chown -R www:www /home/www
 
 # Clean up
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && rm /var/log/lastlog /var/log/faillog
 
-# Set working directory
-WORKDIR /var/www
-
-USER $USER
+USER www
 
 EXPOSE 9000
 
