--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -17,7 +17,8 @@ RUN apt-get update && apt-get install -y \
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd mysqli json gmp \
     && pecl install -o -f redis && rm -rf /tmp/pear && docker-php-ext-enable redis \
-    && pecl install imagick && docker-php-ext-enable imagick
+    && pecl install imagick && docker-php-ext-enable imagick \
+    && docker-php-ext-configure zip --with-libzip && docker-php-ext-install zip
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
