--- a/env.example
+++ b/env.example
@@ -1,2 +1,16 @@
+# general settings
+APP_PREFIX=example
 APP_HOST=/home/user/www/project
 APP_CONTAINER=/var/www/project
+
+# database settings
+MYSQL_USER=admin
+MYSQL_PASSWORD=secret
+MYSQL_DATABASE=example
+
+# images settings
+PHP_IMAGE=php:latest
+MYSQL_IMAGE=mysql:latest
+NGINX_IMAGE=nginx:latest
+REDIS_IMAGE=redis:latest
+NODE_IMAGE=node:latest
