--- a/nginx/example.conf
+++ b/nginx/example.conf
@@ -40,4 +40,7 @@ server {
 
     error_log /var/log/nginx/laravel_error.log;
     access_log /var/log/nginx/laravel_access.log;
+
+    charset UTF-8;
+    client_max_body_size 20M;
 }
