--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     build:
       context: ./php-fpm
       dockerfile: Dockerfile
-    image: ${APP_PREFIX}-${PHP_IMAGE}
+      args:
+        IMAGE: ${PHP_IMAGE}
+    image: ${PHP_IMAGE}
     container_name: ${APP_PREFIX}-php-fpm
     restart: unless-stopped
     working_dir: ${APP_CONTAINER}
     volumes:
       - ${APP_HOST}:${APP_CONTAINER}
       - ./php-fpm/local.ini:/usr/local/etc/php/conf.d/local.ini
-    ports:
-      - "9000:9000"
 
   mysql:
     image: ${MYSQL_IMAGE}
@@ -35,7 +35,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "81:81"
     volumes:
       - ${APP_HOST}:${APP_CONTAINER}
       - ./nginx:/etc/nginx/conf.d
