--- a/env.example
+++ b/env.example
@@ -1,4 +1,6 @@
 # general settings
+COMPOSE_PROJECT_NAME=example
+
 APP_PREFIX=example
 APP_HOST=/home/user/www/project
 APP_CONTAINER=/var/www/project
