--- a/mysql/local.cnf
+++ b/mysql/local.cnf
@@ -1,8 +1,11 @@
-# The MySQL  Client configuration file.
+use# The MySQL  Client configuration file.
 #
 # For explanations see
 # http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
 [mysqld]
-character_set_server=utf8
-default_authentication_plugin=mysql_native_password
+character-set-server=utf8mb4
+collation-server=utf8mb4_unicode_ci
+default-authentication-plugin=mysql_native_password
+default-time-zone="+03:00"
+sort-buffer-size=256000000
