--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -2,6 +2,8 @@ ARG IMAGE
 
 FROM ${IMAGE}
 
+USER root
+
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     git \
@@ -20,7 +22,8 @@ RUN apt-get update && apt-get install -y \
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd mysqli json gmp \
     && pecl install -o -f redis && rm -rf /tmp/pear && docker-php-ext-enable redis \
     && pecl install imagick && docker-php-ext-enable imagick \
-    && docker-php-ext-configure zip --with-libzip && docker-php-ext-install zip
+    && docker-php-ext-configure zip --with-libzip && docker-php-ext-install zip \
+    && docker-php-ext-configure intl && docker-php-ext-install intl
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
